feat(tests): Add unit tests [LNG-323] (#81)
* Add imports tests

* Add unit tests on document info

* Add workflow

* PR fixes

* Update server/src/test/info.test.ts

Co-authored-by: shamsartem <shamsartem@gmail.com>

* PR fixes

* Update target, PR fixes

* Update .vscodeignore

---------

Co-authored-by: shamsartem <shamsartem@gmail.com>

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "scripts": {
         "before-tests": "bash integration-tests/before-tests.sh",
         "test": "npm run compile && vscode-test",
+        "test:unit": "npm run test -C server",
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -b",
         "watch": "tsc -b -w",
