--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "declaration": true,
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES5",
+        "target": "es2020",
         "outDir": "out",
         "rootDir": "src",
         "sourceMap": true
     },
-    "include": ["src"],
     "types": ["node"],
+    "include": [],
     "exclude": ["node_modules", ".vscode-test"],
     "references": [
         {
