--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "allowJs": true,
     "compilerOptions": {
-        "target": "ES5",
+        "target": "es2020",
         "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
@@ -10,6 +10,6 @@
         "rootDir": "src"
     },
     "include": ["src"],
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules", "src/test"],
     "extends": "@tsconfig/node16-strictest/tsconfig.json"
 }
