--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,10 +39,7 @@ jobs:
               with:
                   artifact: fcli
                   version: ${{ inputs.fcli-version }}
-
-            - name: Setup upterm session
-              uses: lhotari/action-upterm@v1
-              if: failure()
+              continue-on-error: true
 
             - name: Install dependencies
               run: npm ci
